# genrec

./: README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml
config/: base.gin
config/hstu/: amazon.gin
config/lcrec/amazon/: lcrec.gin  lcrec_debug.gin  rqvae.gin
config/rqvae/: amazon.gin  p5_amazon.gin
config/sasrec/: amazon.gin
config/tiger/: amazon.gin  p5_amazon.gin
config/tiger/amazon/: rqvae.gin  tiger.gin
docs/: index.md
docs/en/: contributing.md  deployment.md  examples.md  faq.md  getting-started.md  index.md  installation.md
docs/en/api/: base-dataset.md  configs.md  dataset-factory.md  datasets.md  index.md  modules.md  processors.md  rqvae.md  tiger.md  trainers.md
docs/en/dataset/: custom.md  overview.md  p5-amazon.md
docs/en/models/: cobra.md  hstu.md  lcrec.md  rqvae.md  sasrec.md  tiger.md
docs/en/training/: rqvae.md  tiger.md
docs/stylesheets/: extra.css
docs/zh/: contributing.md  deployment.md  examples.md  faq.md  getting-started.md  index.md  installation.md
docs/zh/api/: base-dataset.md  configs.md  dataset-factory.md  datasets.md  index.md  modules.md  processors.md  rqvae.md  tiger.md  trainers.md
docs/zh/dataset/: custom.md  overview.md  p5-amazon.md
docs/zh/models/: cobra.md  hstu.md  lcrec.md  rqvae.md  sasrec.md  tiger.md
docs/zh/training/: rqvae.md  tiger.md
genrec/: __init__.py
genrec/data/: __init__.py  amazon.py  amazon_cobra.py  amazon_hstu.py  amazon_lcrec.py  amazon_sasrec.py  p5_amazon.py  schemas.py  utils.py
genrec/models/: __init__.py  cobra.py  hstu.py  lcrec.py  notellm.py  rqvae.py  sasrec.py  tiger.py
genrec/modules/: __init__.py  embedding.py  encoder.py  gumbel.py  kmeans.py  loss.py  metrics.py  normalize.py  scheduler.py  transformer.py  utils.py
genrec/trainers/: __init__.py  cobra_trainer.py  hstu_trainer.py  lcrec_trainer.py  rqvae_trainer.py  sasrec_trainer.py  tiger_trainer.py
