[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genrec"
version = "0.1.0"
description = "A Model Zoo for Generative Recommendation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Qi Lu", email = "luqi.code@gmail.com"}
]
keywords = ["recommendation", "generative", "deep-learning", "pytorch", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.31.0",
    "gin-config>=0.5.0",
    "einops>=0.8.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "polars>=1.9.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.19.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-static-i18n>=1.0.0",
]
full = [
    "triton>=3.0.0",
    "torchvision>=0.15.0",
    "torch-geometric>=2.0.0",
    "peft>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/phonism/genrec"
Documentation = "https://phonism.github.io/genrec"
Repository = "https://github.com/phonism/genrec"
Issues = "https://github.com/phonism/genrec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["genrec*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | reference
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "reference",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["genrec"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "reference/",
    "venv/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["genrec"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
